UnitTestオプションを変更 refs #4