@@ -156,10 +156,16 @@ android {
 
     dexOptions {
         // memo: http://developer.covelline.com/2015/06/circle-ci/
-        javaMaxHeapSize "2g"
+        javaMaxHeapSize "1g"
         preDexLibraries !(System.getenv()["CIRCLECI"] as boolean)
     }
 
+    testOptions {
+        unitTests.all {
+            // All the usual Gradle options.
+            jvmArgs '-Xms256m -Xmx1024m -XX:MaxPermSize=128m -XX:+HeapDumpOnOutOfMemoryError'
+        }
+    }
     // 署名設定
     signingConfigs {
         debug {
